# rust-services

./: Cargo.toml  README.md
src/: lib.rs  sqlite.rs
tests/: rusqlite_examples.rs  simple_service_macros.rs
