[package]
name = "rust_sqlite"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "SQLite integration and utilities for the Runar ecosystem."

[dependencies]
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
runar_common = { path = "../rust-common" }
runar_node = { path = "../rust-node" }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "test-util"] }
runar_macros = { path = "../rust-macros" }
# These are required for integration tests in tests/rusqlite_examples.rs
